[tool.poetry]
name = "cat-framework"
version = "0.1.0"
description = ""
authors = ["robertcunningham5 <robertcunningham@artium.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
plotly = "^5.24.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
